# BiocParallel

./: .BBSoptions  .Rbuildignore  .gitignore  DESCRIPTION  GSoC2013-todo.md  NAMESPACE  NEWS  README.md  configure  configure.ac
R/: AWSParam-class.R  AllGenerics.R  BatchJobsParam-class.R  BatchtoolsParam-class.R  BiocParallel-defunct.R  BiocParallelParam-class.R  DeveloperInterface.R  DoparParam-class.R  ErrorHandling.R  LastError.R  LocalParam-class.R  MulticoreParam-class.R  SerialParam-class.R  SnowParam-class.R  SnowParam-utils.R  TransientMulticoreParam-class.R  balancer.R  bpaggregate-methods.R  bparallelize-methods.R  bpbackend-methods.R  bpinit.R  bpisup-methods.R  bpiterate-methods.R  bplapply-methods.R  bploop.R  bpmapply-methods.R  bpmvec-methods.R  bpoptions.R  bpschedule-methods.R  bpstart-methods.R  bpstop-methods.R  bpvalidate.R  bpvec-methods.R  bpvectorize-methods.R  bpworkers-methods.R  cpp11.R  internal_rng_stream.R  ipcmutex.R  log.R  mcmapply.R  (+10 more)
inst/: NEWS.Rd  RMPInode.sh  RSOCKnode.sh  batchtools.Multicore_conf.R
man/: AllClasses.Rd  BatchJobsParam-class.Rd  BatchtoolsParam-class.Rd  BiocParallel-defunct.Rd  BiocParallel-deprecated.Rd  BiocParallel-package.Rd  BiocParallelParam-class.Rd  DeveloperInterface.Rd  DoparParam-class.Rd  LastError.Rd  LocalParam.Rd  MulticoreParam-class.Rd  SerialParam-class.Rd  SnowParam-class.Rd  bpaggregate.Rd  bparallelize.Rd  bpcontrols.Rd  bperror.Rd  bpiterate.Rd  bplapply.Rd  bploop.Rd  bpmapply.Rd  bpmvec.Rd  bpok.Rd  bpoptions.Rd  bpresult.Rd  bpresume.Rd  bpschedule.Rd  bptry.Rd  bpvalidate.Rd  bpvec.Rd  (+6 more)
(+66 files in other folders)
